crates/tracel-mlir-rs/src/dialect/llvm/snapshots/tracel_mlir_rs__dialect__llvm__tests__compile_inttoptr.snap
---
source: crates/tracel-mlir-rs/src/dialect/llvm/mod.rs
expression: module.as_operation()
---
module {
  llvm.func @foo(%arg0: i64) -> !llvm.ptr {
    %0 = llvm.inttoptr %arg0 : i64 to !llvm.ptr
    llvm.return %0 : !llvm.ptr
  }
}
