crates/tracel-mlir-rs/src/dialect/llvm/snapshots/tracel_mlir_rs__dialect__llvm__tests__compile_undefined.snap
---
source: crates/tracel-mlir-rs/src/dialect/llvm/mod.rs
expression: module.as_operation()
---
module {
  llvm.func @foo(%arg0: !llvm.struct<(i64)>) {
    %0 = llvm.mlir.undef : !llvm.struct<(i64)>
    llvm.return
  }
}
